--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "description": "いつでもポモドーロタイマーが使えるVRCアバターギミックです。",
   "author": {
     "name": "YA7GI"
+  },
+  "vpmDependencies": {
+    "com.vrchat.avatars": ">=3.0.0"
   }
 }
